Fix issue with negative margins leaving unwanted white space on mobile and tablet view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -576,6 +576,7 @@ html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   min-width: 320px;
+  overflow-x: hidden !important;
 }
 
 /**
@@ -1474,18 +1475,16 @@ video::-webkit-media-controls {
   transform: translate3d(0, 0, 0);
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1280px) {
   .box {
     font-size: 1em;
     min-height: 295px !important;
-    width: 350px;
+    width: 320px;
   }
 }
 
 .skills {
   margin-bottom: 10%;
-  margin-left: -15% !important;
-  margin-right: -15% !important;
 }
 
 .skills h4 {
@@ -1527,6 +1526,7 @@ video::-webkit-media-controls {
   width: 900px;
   height: 875px;
   position: absolute;
+  overflow-x: hidden !important;
   top: -30%;
   left: 60%;
   margin-left: -500px;
@@ -1539,7 +1539,7 @@ video::-webkit-media-controls {
   filter: blur(0.5px);
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1280px) {
   .wave {
     width: 631px;
     height: 623px;
