--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -8,6 +8,7 @@
 html {
   box-sizing: border-box;
   min-width: 320px;
+  overflow-x: hidden !important;
 }
 
 /**
