--- a/assets/sass/components/_waveskills.scss
+++ b/assets/sass/components/_waveskills.scss
@@ -23,17 +23,15 @@
     @include vendor('transform', 'translate3d(0, 0, 0)');
   }
 
-  @include breakpoint('<=medium') {
+  @include breakpoint('<=large') {
     font-size: 1em;
     min-height: 295px !important;
-    width: 350px;
+    width: 320px;
   }
 }
 
 .skills {
   margin-bottom: 10%;
-  margin-left: -15% !important;
-  margin-right: -15% !important;
 
   h4 {
     padding-top: 2.5%;
@@ -57,6 +55,7 @@
   width: 900px;
   height: 875px;
   position: absolute;
+  overflow-x: hidden !important;
   top: -30%;
   left: 60%;
   margin-left: -500px;
@@ -65,7 +64,7 @@
   background: $highlight;
   @include vendor('filter', 'blur(0.5px)');
 
-  @include breakpoint('<=medium') {
+  @include breakpoint('<=large') {
     width: 631px;
     height: 623px;
     top: 51%;
